--- a/Trivia/Trivia.vcxproj
+++ b/Trivia/Trivia.vcxproj
@@ -127,11 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BaseException.hpp" />
     <ClInclude Include="Communicator.h" />
     <ClInclude Include="ComunicateHelper.h" />
     <ClInclude Include="IRequestHandler.h" />
     <ClInclude Include="LoginRequestHandler.h" />
     <ClInclude Include="RequestHandleFactory.h" />
+    <ClInclude Include="ServerConnectionError.hpp" />
+    <ClInclude Include="ServerOpenSocketError.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Communicator.cpp" />
