added method bindAndListen to class Communicator

--- a/Trivia/Trivia.vcxproj
+++ b/Trivia/Trivia.vcxproj
@@ -129,7 +129,7 @@
   <ItemGroup>
     <ClInclude Include="BaseException.hpp" />
     <ClInclude Include="Communicator.h" />
-    <ClInclude Include="ComunicateHelper.h" />
+    <ClInclude Include="CommunicationHelper.h" />
     <ClInclude Include="IRequestHandler.h" />
     <ClInclude Include="LoginRequestHandler.h" />
     <ClInclude Include="RequestHandleFactory.h" />
@@ -138,7 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Communicator.cpp" />
-    <ClCompile Include="ComunicateHelper.cpp" />
+    <ClCompile Include="CommunicationHelper.cpp" />
     <ClCompile Include="IRequestHandler.cpp" />
     <ClCompile Include="LoginRequestHandler.cpp" />
     <ClCompile Include="RequestHandleFactory.cpp" />
