--- a/Trivia/Trivia.vcxproj
+++ b/Trivia/Trivia.vcxproj
@@ -133,7 +133,9 @@
     <ClInclude Include="IRequestHandler.h" />
     <ClInclude Include="LoginRequestHandler.h" />
     <ClInclude Include="RequestHandleFactory.h" />
+    <ClInclude Include="server.h" />
     <ClInclude Include="ServerConnectionError.hpp" />
+    <ClInclude Include="ServerInvalidMessage.hpp" />
     <ClInclude Include="ServerOpenSocketError.hpp" />
     <ClInclude Include="WSAInitializer.h" />
   </ItemGroup>
@@ -145,6 +147,7 @@
     <ClCompile Include="LoginRequestHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="RequestHandleFactory.cpp" />
+    <ClCompile Include="server.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
