--- a/Server/Trivia2.0.0.vcxproj.filters
+++ b/Server/Trivia2.0.0.vcxproj.filters
@@ -111,6 +111,12 @@
     <ClInclude Include="GameRequestHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ICryptoAlgorithem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AESCryptoAlgorithem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="sqlite3.c">
@@ -183,6 +189,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GameRequestHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AESCryptoAlgorithem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
